# SenseQuant

./: .coverage  .env.example  .gitignore  KNOWN_ISSUES.md  Makefile  PROJECT_STATUS.md  US028_CHUNKING_IMPLEMENTATION_SUMMARY.md  US028_PHASE2_DIAGNOSTIC_SUMMARY.md  US028_PHASE6C_BUG_FIX.md  bmad.project.yaml  breeze_api_doc.md  claude.md  inspect_cached_data.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_breeze_api.py  test_breeze_mapping.py  test_breeze_stock_codes.py
bmad/: roles.md
config/: search_space.yaml
dashboards/: README.md  data_quality_dashboard.py  telemetry_dashboard.py
docs/: ANALYSIS-AND-IMPROVEMENTS.md  BACKTEST-TELEMETRY-INTEGRATION.md  SenseQuant_Project_Overview.md  US-029-Phase-5-Specification.md  architecture.md  backfill_handoff_20251102.md  backfill_handoff_20251102_afternoon.md  batch4-ingestion-report.md  batch4-training-results.md  batch5-ingestion-report.md  bmad-agent-workflow.md  commandments.md  failure_report_20251101_173530.md  gpu_profiling_experiment_2025-11-01.md  multi-gpu-spike.md  phase6o-implementation-plan.md  prd.md  session-2025-11-01-batch-trainer-hardening.md
notebooks/: README.md  accuracy_report.ipynb  optimization_report.ipynb
scripts/: backfill_remaining_symbols.py  backtest.py  check_symbol_coverage.py  clear_env.sh  deploy.py  discover_symbol_mappings.py  distributed_training_worker.py  encrypt_secrets.py  export_notebook.py  fetch_historical_data.py  fetch_macro_data.py  fetch_options_data.py  fetch_order_book.py  fetch_sentiment_snapshots.py  generate_manifest.py  monitor.py  (+18 more)
(+135 files in other folders)
